--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ footer {
     Regsiter section              
 -----------------------------------------*/
 #register {
-    background: url('../images/register-bg.jpg') 50% 0 repeat-y fixed;
+    background: url('../images/back2.jpg') 50% 0 repeat-y fixed;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
@@ -461,8 +461,8 @@ footer {
 }
 
 #register input[type="submit"] {
-  background: #f2545f;
-  border-radius: 100px;
+  background: #06005e;
+  border-radius: 10px;
   border: none;
   color: #ffffff;
   letter-spacing: 2px;
