--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ footer {
 -----------------------------------------*/
 .custom-navbar {
     margin-bottom: 0;
-    background-color: #101010;
+    background-color: #101010 !important;
 }
 
 .custom-navbar .navbar-brand img{
@@ -583,19 +583,38 @@ background-attachment:fixed;
    Venue section              
 -----------------------------------------*/
 #venue {
-    background: url('../images/venue-bg.jpg') 50% 0 repeat-y fixed;
+    background: url('../images/IEEE.jpg') 50% 0 repeat-y fixed;
     background-size: cover;
-    background-position: center center;
+    /*background-position: center center;*/
     padding-top: 7rem;
     padding-bottom: 7rem;
 }
-
+#venue h2{
+  position: relative;
+    bottom: 10px;
+    color: white;
+    font-size: 40px!important;
+    font-weight: 700;
+}
 #venue p {
+    margin-top: 5px;
   padding-top: 12px;
   padding-bottom: 18px;
+    color: white;
 }
-
-
+#venue button a{
+    color: white;
+}
+#galleryIntroImg img{
+    margin: 10px 0;
+    border-radius: 10px;
+    width:380px;
+    height: 220px;
+    transition: 1s;
+}
+#galleryIntroImg img:hover {
+    transform: scale(1.07);
+}
 
 /*---------------------------------------
    Sponsors section              
