--- a/css/style.css
+++ b/css/style.css
@@ -215,8 +215,11 @@ footer {
 }
 
 .custom-navbar .navbar-brand img{
-    width: 100px;
-    height: 50px;
+    width: 70px;
+    /* height: 50px; */
+}
+.student-branch-img img{
+  width: 200px !important;
 }
 
 .custom-navbar .nav li a {
@@ -275,8 +278,11 @@ footer {
 
 @media (max-width:768px) {
   .custom-navbar .navbar-brand img{
-    width: 60px;
+    width: 50px;
     height: 30px;
+}
+.navbar-brand-student img{
+  width: 50px;
 }
   
 }
