--- a/css/gallery.css
+++ b/css/gallery.css
@@ -6,9 +6,13 @@
     background-color: #101010 !important;
 }
 
-.custom-navbar .navbar-brand img{
-    /* width: 100px;
-    height: 70px; */
+.custom-navbar .navbar-brand img {
+    width: 70px;
+    /* height: 50px; */
+}
+
+.student-branch-img img {
+    width: 200px !important;
 }
 
 .custom-navbar .nav li a {
@@ -26,12 +30,12 @@
     color: #66ccff;
 }
 
-.custom-navbar .navbar-nav > li > a:hover,
-.custom-navbar .navbar-nav > li > a:focus {
+.custom-navbar .navbar-nav>li>a:hover,
+.custom-navbar .navbar-nav>li>a:focus {
     background-color: transparent;
 }
 
-.custom-navbar .nav li.active > a {
+.custom-navbar .nav li.active>a {
     background-color: transparent;
     color: #66ccff;
 }
@@ -56,6 +60,7 @@
         border-bottom: 0;
         background: 0 0;
     }
+
     .custom-navbar.top-nav-collapse {
         background: #101010;
         padding: 0;
@@ -65,51 +70,61 @@
 }
 
 @media (max-width:768px) {
-    .custom-navbar .navbar-brand img{
-        /* width: 60px;
-        height: 30px; */
+    .custom-navbar .navbar-brand img {
+        width: 50px;
+        height: 30px;
+    }
+
+    .navbar-brand-student img {
+        width: 50px;
     }
 
 }
 
-#gallery{
+#gallery {
     background-image: url("../images/galleryBackground.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     /*background-color: #050d42;*/
-    position: absolute!important;
-    top:17% !important;
+    position: absolute !important;
+    top: 17% !important;
 }
-.galleryImg{
+
+.galleryImg {
     margin: 10px 0;
-   position: relative;
+    position: relative;
     right: 5px;
     width: 103%;
     height: 220px;
     border-radius: 10px;
     transition: 1.1s;
 }
-.galleryImg:hover{
+
+.galleryImg:hover {
     transform: scale(1.07);
 }
-#galleryTitle h1{
-    margin:30px ;
+
+#galleryTitle h1 {
+    margin: 30px;
     color: white;
     text-align: center;
-    font-weight: bold!important;
+    font-weight: bold !important;
 }
-@media screen and (max-width:992px){
-    #gallery{
-        top:25% !important;
+
+@media screen and (max-width:992px) {
+    #gallery {
+        top: 25% !important;
     }
 
 }
-@media screen and (max-width:768px){
-    #gallery{
-        top:8% !important;
+
+@media screen and (max-width:768px) {
+    #gallery {
+        top: 8% !important;
     }
-    .galleryImg{
+
+    .galleryImg {
         margin: 30px;
         width: 94%;
         right: 13px;
